--- a/app/index.scss
+++ b/app/index.scss
@@ -1,19 +1,3 @@
-/**
- * @license
- * Copyright 2019 Google LLC. All Rights Reserved.
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- * =============================================================================
- */
 html {
   scroll-behavior: smooth;
 }
@@ -21,119 +5,101 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Roboto Mono', monospace;
+  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica,ubuntu, roboto, noto, segoe ui, arial, sans-serif;
+  font-size: 1.5em;
 }
 
 .container {
-  -webkit-transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0, 0, 0);
 
   .header {
     text-align: center;
-    padding: 20px;
+    padding: 0.5em;
     background-color: #005282;
     border-bottom: 1px solid #fff;
-    font-family: "Roboto","Helvetica","Arial",sans-serif;
-    font-size: 24px;
-    line-height: 1.4em;
+    line-height: 1.3;
     color: #fff;
   }
 
   .app {
-    font-size: 14pt;
     display: flex;
     flex-direction: column;
     min-width: 100%;
     height: 100%;
-    font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
-    box-shadow: 0 1px 5px rgba(0,0,0,0.12), 0 1px 3px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  }
+
+  #message-area {
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  }
+
+  .messages {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    padding: 1em;
+  }
+
+  .message {
+    display: flex;
+    align-items: center;
+
+    span {
+      display: block;
+      border-radius: 0.25em;
+      margin: 10px;
+      padding: 10px;
+    }
+
+    &.bot span {
+      background-color: #005282;
+      color: #fff;
+      border-radius: 4px;
+    }
+
+    &.bot::before {
+      content: '🤖';
+    }
+
+    &.input {
+      align-self: flex-end;
+    }
+
+    &.input span {
+      background-color: #33aaee;
+      text-align: right;
+      color: white;
+    }
+
+    &.input::after {
+      content: '🐵';
+    }
   }
 
   .controls {
     border-top: 0.5px solid #e3e3e3;
-    padding: 10px;
-    flex-grow: 1;
-    height: 0;
-
-    #speech,
-    #submit {
-      margin-left: 10px;
-      font-size: 20px;
-      border-radius: 4px;
-      padding: 9px;
-      background-color: white;
-    }
     padding: 10px;
 
     form {
       display: flex;
       flex-direction: row;
       justify-content: center;
+      margin: 0;
     }
 
     #textbox {
-      width: 100%;
-      height: 48px;
-      font-size: 18pt;
+      flex: 1;
+      font-size: 100%;
     }
-  }
 
-  #message-area {
-    box-shadow: 0 1px 5px rgba(0,0,0,0.12), 0 1px 3px rgba(0,0,0,0.24);
-  }
-
-  .messages {
-    flex: 7 0;
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-  }
-
-  .messages > :first-child {
-    margin-top: auto !important;
-  }
-
-  .message {
-    border-radius: 8px;
-    margin: 10px;
-    padding: 10px;
-
-    & button {
-      margin-right: 10px;
-      font-size: 20px;
+    #speech,
+    #submit {
+      font-size: 100%;
+      margin-left: 10px;
       border-radius: 4px;
       padding: 9px;
       background-color: white;
-    }
-
-    &.bot {
-      background-color: #005282;
-      color: #fff;
-      align-self: flex-start;
-      border-radius: 4px;
-      font-size: 20pt;
-      margin-left: 50px;
-    }
-
-    &.bot:before {
-      content: '🤖 ';
-      margin-left: -50px;
-      margin-right: 30px;
-      font-size: 18pt;
-    }
-
-    &.input {
-      background-color: #33aaee;
-      align-self: flex-end;
-      color: white;
-      font-size: 20pt;
-      margin-right: 50px;
-    }
-
-    &.input:after {
-      content: ' 🐵';
-      position: relative;
-      right: -45px;
-      font-size: 18pt;
     }
   }
 }
