--- a/app/index.scss
+++ b/app/index.scss
@@ -37,6 +37,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     overflow-y: scroll;
     padding: 0.5em;
   }
