--- a/app/index.scss
+++ b/app/index.scss
@@ -46,6 +46,14 @@ body {
     display: flex;
     align-items: center;
 
+    & button {
+      margin-right: 10px;
+      font-size: 20px;
+      border-radius: 4px;
+      padding: 9px;
+      background-color: white;
+    }
+
     span {
       display: block;
       border-radius: 0.25em;
