--- a/app/index.scss
+++ b/app/index.scss
@@ -37,7 +37,6 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
     overflow-y: scroll;
     padding: 0.5em;
   }
@@ -45,6 +44,10 @@ body {
   .message {
     display: flex;
     align-items: center;
+
+    &:first-child {
+      margin-top: auto;
+    }
 
     & button {
       margin-right: 10px;
